add new route to swagger and server
