# internal/server/handlers/db_get_fields.go
@@ -8,21 +8,17 @@ import (
 	"github.com/snapp-incubator/crafting-table/internal/structure"
 )
 
-type requestBodyGetStructs struct {
-	Source string `json:"source"`
+type requestBodyGetFieldsOFStruct struct {
+	Source     string `json:"source"`
+	StructName string `json:"struct_name"`
 }
 
-type responseBody struct {
-	Status string                 `json:"status"`
-	Data   map[string]interface{} `json:"data"`
-}
-
-func GetStructs() func(w http.ResponseWriter, r *http.Request) {
+func GetFieldsOFStruct() func(w http.ResponseWriter, r *http.Request) {
 	return func(w http.ResponseWriter, r *http.Request) {
 		w.WriteHeader(http.StatusOK)
 		w.Header().Set("Content-Type", "application/json")
 
-		var rq requestBodyGetStructs
+		var rq requestBodyGetFieldsOFStruct
 		err := json.NewDecoder(r.Body).Decode(&rq)
 		if err != nil {
 			w.WriteHeader(http.StatusBadRequest)
@@ -30,22 +26,22 @@ func GetStructs() func(w http.ResponseWriter, r *http.Request) {
 			return
 		}
 
-		structs, err := structure.BindAllStructs(rq.Source)
+		s, err := structure.BindStruct(rq.Source, rq.StructName)
 		if err != nil {
 			w.WriteHeader(http.StatusBadRequest)
 			log.Println(err)
 			return
 		}
 
-		structNames := make([]string, 0, len(structs))
-		for _, s := range structs {
-			structNames = append(structNames, s.Name)
+		fieldsNames := make([]string, 0, len(s.Fields))
+		for _, field := range s.Fields {
+			fieldsNames = append(fieldsNames, field.Name)
 		}
 
 		var res responseBody
 		res.Status = "success"
 		res.Data = make(map[string]interface{})
-		res.Data["structs"] = structNames
+		res.Data["fields"] = fieldsNames
 
 		err = json.NewEncoder(w).Encode(&res)
 		if err != nil {
